[package]
authors     = ["Cheng JIANG <jiang.cheng@vip.163.com>"]
description = "Diesel adapter for casbin-rs"
edition     = "2018"
homepage    = "https://github.com/casbin-rs/diesel-adapter"
license     = "Apache-2.0"
name        = "diesel-adapter"
readme      = "README.md"
version     = "0.8.3"

[dependencies]
async-std   = { version = "1.8.0", default-features = false, optional = true }
async-trait = "0.1.40"
casbin      = { version = "~2.0.5", default-features = false }
diesel      = { version = "1.4.5", default-features = false, features = ["r2d2"] }
futures     = "~0.3"
tokio       = { version = "~0.2.22", default-features = false, optional = true }

[features]
default = ["postgres", "runtime-tokio"]

mysql    = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite   = ["diesel/sqlite"]

runtime-async-std = ["casbin/runtime-async-std", "async-std/unstable"]
runtime-tokio     = ["casbin/runtime-tokio", "tokio/blocking", "tokio/rt-core"]

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
tokio     = { version = "~0.2.22", features = ["full"] }
