[package]
authors     = ["Cheng JIANG <jiang.cheng@vip.163.com>"]
description = "Diesel adapter for casbin-rs"
edition     = "2018"
homepage    = "https://github.com/casbin-rs/diesel-adapter"
license     = "Apache-2.0"
name        = "diesel-adapter"
readme      = "README.md"
version     = "1.0.0"

[dependencies]
async-std   = { version = "1.9.0", default-features = false, optional = true }
async-trait = "0.1.42"
casbin      = { version = "2.1.0", default-features = false }
diesel      = { version = "2.0.3", default-features = false, features = ["r2d2"] }
futures     = "0.3"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
tokio       = { version = "1.1.1", default-features = false, optional = true }
once_cell = "1.5.2"

[features]
default = ["postgres", "runtime-tokio"]

mysql    = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite   = ["diesel/sqlite", "libsqlite3-sys/bundled"]

runtime-async-std = ["casbin/runtime-async-std", "async-std/unstable"]
runtime-tokio     = ["casbin/runtime-tokio", "tokio/rt"]

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
tokio     = { version = "1.1.1", features = ["full"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3

[profile.dev]
split-debuginfo = "unpacked"
